# gpu-stock-tracker

./: Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: build-and-push.yml
src/: main.rs
